Make tester and examples compile again and test script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,9 @@ add_executable(example5 ${EXAMPLE5_SRC_LIST})
 target_link_libraries(example5 miniz)
 add_executable(example6 ${EXAMPLE6_SRC_LIST})
 target_link_libraries(example6 miniz)
+if(${UNIX})
+    target_link_libraries(example6 m)
+endif()
 
 # add_executable(miniz_tester ${MINIZ_TESTER_SRC_LIST})
 # target_link_libraries(miniz_tester miniz)
