--- a/miniz.pc.in
+++ b/miniz.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
 
 Name: @PROJECT_NAME@
 Description: @PROJECT_DESCRIPTION@
-Version: @PROJECT_VERSION@
+Version: @MINIZ_VERSION@
 URL: @PROJECT_HOMEPAGE_URL@
 
 Requires:
