build: Install .pc file in correct directory
/usr/share/pkgconfig should be used for architecture independent
libraries (e.g. data or scripts), while an architecture dependent
directory like /usr/lib64/pkgconfig should be used for native
binaries.

Co-authored-by: Sam James <sam@gentoo.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -173,7 +173,7 @@ if(NOT BUILD_HEADER_ONLY)
   if(INSTALL_PROJECT)
     install(FILES
       ${CMAKE_CURRENT_BINARY_DIR}/miniz.pc
-      DESTINATION ${CMAKE_INSTALL_DATADIR}/pkgconfig)
+      DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
   endif()
 endif()
 
