miniz.pc.in: fix include path not containing the "miniz" suffix

--- a/miniz.pc.in
+++ b/miniz.pc.in
@@ -1,7 +1,7 @@
 prefix=@CMAKE_INSTALL_PREFIX@
 exec_prefix=${prefix}
 libdir=${exec_prefix}/@CMAKE_INSTALL_LIBDIR@
-includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@
+includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@/@PROJECT_NAME@
 
 Name: @PROJECT_NAME@
 Description: @PROJECT_DESCRIPTION@
